manifest/objects/Agreement_Action_Mapping__mdt.object
<CustomObject>
    <description>Agreement Action Mapping</description>
    <fields>
        <fullName>Additional_Exclusion__c</fullName>
        <inlineHelpText>Enter Additional Exclusion criteria to used for Action visibility.</inlineHelpText>
        <label>Additional Exclusion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Inclusion__c</fullName>
        <inlineHelpText>Enter Additional Inclusion criteria to used for Action visibility</inlineHelpText>
        <label>Additional Inclusion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Action__c</fullName>
        <inlineHelpText>Enter Agreement Action here for which you want to control visibility by Process/Business flow.</inlineHelpText>
        <label>Agreement Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generate</fullName>
                    <default>true</default>
                    <label>Generate</label>
                </value>
                <value>
                    <fullName>Regenerate</fullName>
                </value>
                <value>
                    <fullName>Import Offline Document</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Preview</fullName>
                </value>
                <value>
                    <fullName>Generate Supporting Document</fullName>
                </value>
                <value>
                    <fullName>Activate</fullName>
                </value>
                <value>
                    <fullName>Submit Request</fullName>
                </value>
                <value>
                    <fullName>Send For eSignature</fullName>
                </value>
                <value>
                    <fullName>Send For Wet Signatures</fullName>
                </value>
                <value>
                    <fullName>Preview &amp; Submit Approvals</fullName>
                </value>
                <value>
                    <fullName>My Approvals</fullName>
                </value>
                <value>
                    <fullName>Send For Review</fullName>
                </value>
                <value>
                    <fullName>Check eSignature Status</fullName>
                </value>
                <value>
                    <fullName>Recall E-Signature Request</fullName>
                </value>
                <value>
                    <fullName>Recall eSignature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Process_Flow_Short_Name__c</fullName>
        <inlineHelpText>Enter short name for the process flow for which you want to control visibility. You can add multiple process flows separated by comma.</inlineHelpText>
        <label>Agreement Process Flow Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_Category__c</fullName>
        <inlineHelpText>Enter Agreement Status Category one or more separated by comma for which you want to control visibility.</inlineHelpText>
        <label>Agreement Status Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <inlineHelpText>Enter Agreement Status one or more separated by comma for which you want to control visibility.</inlineHelpText>
        <label>Agreement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Enter Agreement Approval  status one or more separated by comma for which you want to control visibility for Approval related actions.</inlineHelpText>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSignLink__c</fullName>
        <label>DocuSignLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EchosignLink__c</fullName>
        <label>EchosignLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inclusion_Or_Exclusion__c</fullName>
        <inlineHelpText>This is more for information to admin, indicating how the condition has been used for controlling action visibility based on the values provided in other fields.</inlineHelpText>
        <label>Inclusion Or Exclusion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                    <default>true</default>
                    <label>Include</label>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lightning_Link__c</fullName>
        <inlineHelpText>Enter link for Salesforce Lightning UI.</inlineHelpText>
        <label>Lightning Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <inlineHelpText>Enter link for Salesforce classic UI.</inlineHelpText>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eSignatureApp__c</fullName>
        <label>eSignatureApp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Agreement Action Mapping</label>
    <listViews>
        <fullName>All_Columns</fullName>
        <columns>Agreement_Action__c</columns>
        <columns>Agreement_Process_Flow_Short_Name__c</columns>
        <columns>Agreement_Status_Category__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Inclusion_Or_Exclusion__c</columns>
        <columns>Lightning_Link__c</columns>
        <columns>Link__c</columns>
        <columns>Additional_Exclusion__c</columns>
        <columns>Additional_Inclusion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Columns</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Agreement Action Mappings</pluralLabel>
</CustomObject>